2009-12-12  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/plotstyles.gnu demo/bldg.png demo/barchart_art.dem Makefile.am.in
	New demo showing 
	a) input of png image using binary filetype=png
	b) rescaling rectangular images to act as plot elements

2009-12-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary):  Tweak auto-placement of plot borders so
	that it is closer to what was used prior to version 4.2.4.  This makes
	the right margin slightly wider than in 4.2.6, and the left margin
	slightly narrower.

2009-12-08  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm (ENHemf_put_text): Left/right/center justification of
	enhanced text was not taking into account the text angle. Now it does.
	Bugfix.

	* src/breaders.c (gd_filetype_function): Make load of jpeg or gif image
	conditional on support by the installed libgd.

	* src/unset.c (reset_command): Reset options to plot style filledcurve.
	Bug #2911203

2009-12-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (undefine_command):
	'undefine  A* B' should not affect BFOO.
	Bugfix.

	* src/internal.c (f_mult):  Check for integer overflow when performing
	internal integer multiplication.
	Bug #2908270

2009-12-04  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* config/makefile.mgw config/makefile.cyg:  Create installation
	directories $(DESTDIR)/$(GNUPLOT_PS_DIR) $(DESTDIR)/$(GNUPLOT_LUA_DIR)

2009-12-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open): The variables that track matrix and binary
	data input (df_matrix, df_num_bin_records) must be re-inititialized
	for every file.

2009-12-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_margin): Limit range of set ?margin at screen <foo>
	to 0 < foo < 1.

	* src/datafile.c (f_stringcolumn) src/plot2d.c (eval_plots):
	Enforce restrictions on which plot types can accept matrix data.

2009-12-01  Ethan A Merritt  <merritt@u.washington.edu>
