@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.591 2009/12/02 06:21:01 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.592 2009/12/20 03:53:51 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -7100,7 +7100,7 @@ Ffigure_mapcontours
        set dgrid3d {<rows>} {,{<cols>}}
                    { splines |
                      qnorm {<norm>} |
-                     gauss | cauchy | exp | box | hann {<dx>} {,{dy}} }
+                     (gauss | cauchy | exp | box | hann) {<dx>} {,dy} }
        unset dgrid3d
        show dgrid3d
 
